--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ament_nodl
-	previous = 
-	base = b995ece
+	previous = b995ece
+	base = a3f8981
 	trim = 
 	trimbase = 
