--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_nodl
-	previous = 
-	base = 83210d6
+	previous = 83210d6
+	base = 0f46919
 	trim = 
 	trimbase = 
