--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ament_nodl
-	previous = 
-	base = 4bef0e9
+	previous = 4bef0e9
+	base = 9590195
 	trim = 
 	trimbase = 
