--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/ament_nodl
-	previous = 
-	base = 7683245
+	previous = 7683245
+	base = d681666
 	trim = 
 	trimbase = 
