--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.1.0-3": ["Tue Feb 08 2022", "Ubuntu Robotics", "ubuntu-robotics@lists.launchpad.net"]}
+{"0.1.0-4": ["Tue Apr 19 2022", "Ubuntu Robotics", "ubuntu-robotics@lists.launchpad.net"], "0.1.0-3": ["Tue Feb 08 2022", "Ubuntu Robotics", "ubuntu-robotics@lists.launchpad.net"]}
